# ChangeLog for dev-util/pkgcore-checks
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgcore-checks/ChangeLog,v 1.58 2015/03/24 15:05:27 radhermit Exp $

  24 Mar 2015; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
  Update module name for plugincache generation.

  19 Feb 2015; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
  Bump to EAPI 5.

  21 Dec 2014; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
  Don't regen plugins in the pkgcore.plugins namespace.

  08 Jun 2014; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
  Drop python3* support until support is finalized for pkgcore and fix python
  deps.

  08 Jun 2014; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
  Drop python2_6 support.

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Drop python herd from maintainers.

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
  Update to distutils-r1 and use github repo.

  17 Jun 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Add myself as a maintainer.

*pkgcore-checks-0.4.15 (27 Oct 2011)

  27 Oct 2011; Brian Harring <ferringb@gentoo.org>
  -pkgcore-checks-0.4.13.ebuild, +pkgcore-checks-0.4.15.ebuild:
  update for recent api changes

  06 Aug 2011; Brian Harring <ferringb@gentoo.org> pkgcore-checks-9999.ebuild:
  use a more canonical url for checkout

*pkgcore-checks-9999 (06 Aug 2011)

  06 Aug 2011; Brian Harring <ferringb@gentoo.org>
  pkgcore-checks-0.4.13.ebuild, pkgcore-checks-0.4.14.ebuild,
  +pkgcore-checks-9999.ebuild:
  update homepage url, and add -9999 version for bleeding edge users.

*pkgcore-checks-0.4.14 (25 Apr 2011)

  25 Apr 2011; Brian Harring <ferringb@gentoo.org>
  +pkgcore-checks-0.4.14.ebuild:
  add 0.4.14; bugfixes and compatibility for snakeoil/pkgcore changes

  22 Mar 2011; Brian Harring <ferringb@gentoo.org>
  pkgcore-checks-0.4.13.ebuild: