@@ -10,30 +10,32 @@ DIST postfix-2.10.6.tar.gz 3830356 SHA256 d3d31ec52432e26972c00129cff2382f3f036e
 DIST postfix-2.11.3.tar.gz 4039705 SHA256 04e5146e6e56261baae9f63c590348a4b12ce22d3d46260e26e97233f40802c3 SHA512 b371f1099b1e6e653242a9b4f3812b38b6a9145a4f4c1c9fa5bef6a02e1a9a8f4ec2979c8946f6c873e303ac54f5dd1a84b934eeea8169e2ce187028c36c857e WHIRLPOOL 7b639ae7a5d0bf16ec0c1568b6f1bb486ccf540ae75269d97be36135441513730d78449b29c99403c6876609ddcc676f5740683a963281f1b2481c33bd4cab8e
 DIST postfix-2.11.4.tar.gz 4040104 SHA256 f4154c1db58c0300897d4c430bd90714ac7855249df59cc8828910fd5ccb031e SHA512 b9c0f065519367fb52c58eeeaed62996da7244c362e5ff9fa9fe5263a06a5fb99a3e30cdf044de0165976581e0bfad89681974ad1b3abbeaedb691db2c20336b WHIRLPOOL 3075c8ff2be9a47c769738f00169a799fe8f2531f21a88efc83e0be386636d9ee5d5a6b205a313e359e5913abe47943fdf264fb08f40173c5ede38427dbb880d
 DIST postfix-3.0.0.tar.gz 4239248 SHA256 c2f2f10aa3e6b7090ba979e9c515e42b3140c5c1c17a33d58787569df7ae0955 SHA512 ba5b67a8f03c6fe6bbb62e2aad981a6f3ba8266ea2fa93abfa5d31cdb20b2d5a47fc373f401b247ca2cb5a19e654f86b2a65fe906c102d729e472b6c5ff1cd7a WHIRLPOOL 1510a17f3376d77eb503b3adf47639f6466a38e20a06ebf7ae0ec6849dc2ea332377c82af816f298a2719bccc4917d14132ee9e11c14cbafa3ea53ec40056f50
-DIST postfix-3.1-20150208.tar.gz 4283031 SHA256 268527acf50f33bfd4456a10bd0664f89b99e6f83ae7c612f8c281281d926db6 SHA512 9ca43458661225536e5d6cfbe9338fe254056dc9b30953801df0c2a030064fe2cbcbf2c164cdfb228a6304fda6f73279caa5eb57ed44daf48cb935a6bbd0313f WHIRLPOOL ccf2dedf81c485a69c09366e8a94779d7ec8e0c45e73569245827bd4312fe69ed7e574876605de1e6dec3bc53b3321559fd78727b790379c33e70d9ebca86221
+DIST postfix-3.1-20150329.tar.gz 4265245 SHA256 08f53d2196cd65c0346b99f327085c259c47ddf226c6fa2855bd409a3325f1f4 SHA512 05c3563fa462427cc48d16c06bee3b5677d37597c2c95973fbffde8474ec0794eb8560601ebc61133a51c2bcd43bff1e110dfd6b4029140997f7e521ed40118a WHIRLPOOL 23f6af8129dfca2f15d07ab802158d31febaeac248964c981e86e65eb0b9367fe5d6ffa00973f0b9316669227531df9e2dc75e04392bf3d9e4f0e7618581d53c
 DIST postfix-vda-v13-2.10.0.patch 55701 SHA256 6208021eb0b37ac6482e334e538ed5700cc22c4d4dd66ed9e975ae5f20bf935f SHA512 0b4b53a8cd28abf56eee3b2ed63ca1814251b60816e6ca1143249d25fd6ef7f905bec3134125ac6e851af685db8aae878012113693261529ae2ddbcf1bd93e62 WHIRLPOOL d98b7d2177b8b69738086880fd08c336fa60b99ff7413624e628fd5f17be2064f2ccaa37c047d3013ed41c0ff1bcb76e7962f8390c4179f28ab11733dd3b59d3
 EBUILD postfix-2.10.6.ebuild 9610 SHA256 5d3abafb4d3ebb7ba90c7969aa4dd3a17de12be80d34443fc34d0c8c2265eb59 SHA512 c7f323dad93073d7ac06e166d4be9c81817fce5492e2c05cdb579de9674298ce8cb2817e898c24a602da3ece8999c92df88837ed54adac855fc6c8f90f62a3ed WHIRLPOOL c5a00f5464d80418cee4a719afd81d519194d3b9e3cf27acd5c59b062f5bb762a9c940fc752f88218d91401c2173a914fcf93fa38d8ac17936763ee9568dc9b0
 EBUILD postfix-2.11.3.ebuild 9787 SHA256 e77b8742bf2abbc331d1b2e1e34071a0b4c1b67044ab569544de40d6ab8d59f3 SHA512 bb0849deed6b2fc601db9b35de6b69660c581b12b0d98a6b43d61e192aeba42e686b59fd122e8598842c62ed0c31fb84028834a938a015e6077ad2a8cf3c28cd WHIRLPOOL 19661286ac70a5fdf8f68e42b5f75e18217823be70105625dcea68212acf14ef6e2ba7dc2f1052a5bff8db30c982138bab74701ab96615a437861145f06c0f1a
 EBUILD postfix-2.11.4.ebuild 9795 SHA256 163629654e4aca99b4118b6b3ec046d1d56e7b807fefcd3974477c7ac1eec5f0 SHA512 8b57ce3759092e17d078697d86b0b7afce1557fa484f4dffc7ac437fda0e68715b5c0d24f68d62555ecedde3c538c07b48f67b14cbaf51b2216068e3479e6077 WHIRLPOOL 500b0422ee1bb3029b5f5cf6e396918d9133d1097acb538017747e06e2947e30e90fd07ae2a37531a1471abbbd21c4028440e6858d9d8fed2e3c0ab5cd121ac7
 EBUILD postfix-3.0.0.ebuild 8940 SHA256 9b94c131c41621d0ac9a6ca5883774d8b8dccf8bad0d3de8e7d061ec24a53b7e SHA512 d6fc7e3cfdda880770d881d7661b3972bd74b7fc65667e01137f9a37569a9d96b0fa4cd02102eea0a8b1acaf83b14fb92f3a1923a4c180552ec39bea35201f26 WHIRLPOOL cfefde23fb2361241d22a6d5484e784ad5d020dc0281e962eaa7eadb374b3885d659c27d24fe185d9f8a688a2b9d751265cdd22bb05ee50f2d8083cc58646619
-EBUILD postfix-3.1_pre20150208.ebuild 8952 SHA256 6f71b6f517f8a1257dbcd081cd76278d243340da142e338bc0a6a1f15fe1f4c5 SHA512 0fd61f011fe03476f7ce0b43fca7b0dbc853233c17669678696892c3399678bd2aa9c2e3f6fd09bdb6845261b7811dfba322dd0f4d5b53b250600dded06ed658 WHIRLPOOL f611cd059f8e5276f61cea153604060e33d8bdf9f7f7c727d0f0215914a9c7864cd6635b4b3ae4122e4f7d60b2467b1019c9ddf29f0079085770fe18affb9807
-MISC ChangeLog 14312 SHA256 39d9200bcc2cba87ed376269bbb95bc286f6ab9941e96dbd10768e00bf4e033c SHA512 17710e1e690e3182c13fd954593b218bf5712e26fadf497d89640d4d06cce401d52260783f1e0a6e05b9610ab2d23f189a2cc5c2230d6abae0de662379e1a864 WHIRLPOOL 5566d9b8d077c0238bdde79c5ea697cbe5341e22bfddec12987ea9c0fdd5382831928acc07b0f77b49a4ef81ec391b974d4eef13f1bc12139191886aa4fb7400
+EBUILD postfix-3.1_pre20150329.ebuild 8952 SHA256 7895e6fc2a2a1c4039aa24b9ebcd746c31cf5065c055df6a9f51f14f01572bdc SHA512 7916e752f4c1cff40183744099c3bc38da5df6818b5b2d7b432bc8b5c2a1d544df0620cec675a585c7bcfcdb0a3b11dc79028a5b104021b2e38cb73b14ad5f93 WHIRLPOOL e10978b51b844d42176935967c2b173aeaacfc2e89dc6827b62073196c9805e1dae6d0995abeac4983140fce35e188479a792da2f0fc6bdbc1f62db5075a5710
+MISC ChangeLog 14481 SHA256 8a35fb744dad7fb190de442f3aea68e7e3be9528b7a6b8dcdc4bad93818e6b55 SHA512 70f7808f246fbe6bcdbabdda350dc1783018c1f500f8c092423a097cd7df26e843d28a6018bd086801ccb3498d4f3e1e402195397285450354ed545028b10252 WHIRLPOOL c6ea99ea578b18a8d3bb61f343c4737e644a476c7403bce628331a788e335d1c252db8759d63eefbacb1d7730560f2b48b3494f29cd8882332cd975705543c50
 MISC ChangeLog-2013 100301 SHA256 439e93c3f6ea08471888157d2347da51181aa9031d4bfdeef2197a6b26680246 SHA512 c678433163e86def50d59e47d7a1a0e8f4c4af860f80932255a7c95544e1f5b55a70b68905b02a417b2332bcf3aaa59281814d8504d70085f0874a23faa2bf02 WHIRLPOOL 15a12897a576cf98d856c551157b72b47aa45fd61d05c6ed55033ce37ce247045c6bcc8143b7ccce4666900d85e0a04087c977a311e31c20f554a991bec74fbc
 MISC metadata.xml 754 SHA256 52b30e7748a792a156ad44b46878b67cb1a359c882e03f76b1d7b3b0bf111129 SHA512 bef165b527524efdcabce97c2fc0735f784dfc014ae810294e6a19b534edc6a01e14e532d730c8b8c2b76c99dafac672074317ec6dc23942285ad27895fd7220 WHIRLPOOL 702d14bd15db16217c664a39534bd1b19774d5f6c5a4a2a43e6595f400c06332c56849fd0d722c7982f5c40398b4bb0b3398b96c6f370a57d99d323d0e84ab51
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJVFx75AAoJELp701BxlEWfLUgQAKnBoahs3TAla1BZkMQZiPra
-iSDvuoPndxgKBKv+vssWRB+cHOngmWZQrx1aWgogasBAIMt2F1MdLawEsc8gtiNh
-+5VpNMTHEE+4r7KNr10hpQmqM5VAiD20dhX94nDc8MwfkVZmqRaoYOvdBYT/AXSO
-+rGBZTPHsZ2SIvvInbuBcVjJkAtjO56ZiMe49o9twCccN8FurwNx0Vetj7U1XSeR
-voRZ1tMDOxpjTpCvl5326s042LoHwWMY/vipY1pN8sIJCnp5NWCchWf15/yB3W83
-ckkPs3n4cCRv4AXu/lb30OXnOWU0l5cMr4kxPbT6NnsnwAim1wlBTfKj7AsuMC5q
-VFFEajTZb2o2Slv90FKxAgPkvt08tSHWjSlBGqDCb5HoqsVIr95s0eknnTrEY4Ks
-FDO9IkPBdgHCmTBIcfHNZMsUOueVbwXSjmakieKMM+lEqT9xhWv6jTG+95MCYlHn
-TE7WA9X7Ql2l4dBDvr52XfyRDb3Bs5E+GpD1S/frOA+gOtEcOLWhAxgKyn9DPuF3
-k/P8g9FdUXQ30lOb9wMCGqFjI86i4Cn6+EkVzyEM5ck1L1d0ylXQSDn+g+kgmvsX
-P/gSmuowVUE1niM6aF68+XqC3rW1E18aTOSjZ8oy6ovunJvgRFkHXeJQB4VpObgj
-u5Vf6LYWvp+nmJ2cnWKx
-=aZQd
+iQJ8BAEBCABmBQJVGOhfXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRBQjk1NkM0NUMxNzFCRTY4Rjk4NENDMDk3
+N0YxRjE3NTU4NkEzQjFGAAoJEHfx8XVYajsfjtAP+wZ07GL7se2anNGdMWUty3NS
+2P+1QQJqSbFXgqcs7FeZgnA3qQvvbdkDpnHtl0kPpZXm01Nxqm1VH2djag4oPq3J
+7YmigodHaDN3ajD3pHE9IOYxc9fJVgmDGDU1kS52khIVHZxdHWN5zFplm9x8Xnjb
+znDUy5yEe+hldbNt5kMtm9wrMvx8Gd6yssH98FndeqTArViQjzwGf0zu3LwQpKUG
+qKoXivmSNPoMis6fCgrVUGpUHsGJXw5WQidv4DVEPfjTe3Q5Nu95T3CF11vr1KtS
+/ohnKpsxS+wNzlLJD1mEr51uyuuq6YFNocHe93IWHUkv1R1zpgbQwCvsD89OrRJl
+9fwcvEb+n3LxPFsufuRyxoIWy/nzyzrOp9BQjAyV0fmhGxetST6fNCfXpsqvzkXN
+LDGutp13M8w+4j2IBmgwYLajG33+pIr07gijksz9/ly+sfxy/e4pGUiWuzrhx47t
+GIB7NdxRS/VGfnZAGSdETYZoalZ6O+VjXxTp369jsaSyhhE4AwMlZfXBMWLBImHL
+uPRtSEL3Gm5RsI/HPRvb8v0Y9MCMMcgwmifkk3b/yfYrQvbS9rk7lW1CsHjrvumV
+k9593gW5nUUwdt/7W/CqrS8Bx4TFBnvHG+Ojk7pBIU1AhsFMgjjqTQgFZb1OGAu2
+GGNScBs56NsDEnasA/n3
+=n3pz
 -----END PGP SIGNATURE-----
