@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.574 2015/03/28 21:36:56 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.575 2015/03/30 06:07:26 eras Exp $
+
+*postfix-3.1_pre20150329 (30 Mar 2015)
+
+  30 Mar 2015; Eray Aslan <eras@gentoo.org> +postfix-3.1_pre20150329.ebuild,
+  -postfix-3.1_pre20150208.ebuild:
+  Version bump
 
   28 Mar 2015; Agostino Sarubbo <ago@gentoo.org> postfix-3.0.0.ebuild:
   Stable for ppc, wrt bug #544248
