@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/pkgcore-checks
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgcore-checks/ChangeLog,v 1.58 2015/03/24 15:05:27 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/pkgcore-checks/ChangeLog,v 1.59 2015/03/30 06:03:29 radhermit Exp $
+
+  30 Mar 2015; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
+  Update DOCS and remove old plugincache2 support.
 
   24 Mar 2015; Tim Harder <radhermit@gentoo.org> pkgcore-checks-9999.ebuild:
   Update module name for plugincache generation.
